--- a/css/main.css
+++ b/css/main.css
@@ -268,16 +268,15 @@ body {
   line-height: 1.9;
   text-align: center;
   letter-spacing: 0.06em;
-  -webkit-transition: -webkit-box-shadow var(--transition-hover-focus);
-  transition: -webkit-box-shadow var(--transition-hover-focus);
-  -o-transition: box-shadow var(--transition-hover-focus);
-  transition: box-shadow var(--transition-hover-focus);
-  transition: box-shadow var(--transition-hover-focus), -webkit-box-shadow var(--transition-hover-focus);
-}
-.button:hover, .button:focus {
-  cursor: pointer;
+  -webkit-transition: background-color var(--transition-hover-focus);
+  -o-transition: background-color var(--transition-hover-focus);
+  transition: background-color var(--transition-hover-focus);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+.button:hover, .button:focus {
+  background-color: #188ce8;
 }
 
 .button-filter {
